@@ -1,6 +1,6 @@
 Tikiwiki Changelog
 ------------------
-$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.128 2003-11-11 18:58:19 dheltzel Exp $
+$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.129 2003-11-13 04:14:11 markusvk Exp $
 
 All developers are invited to add relevant changes in that file as they
 apply them to the CVS source. You can optionnaly indicate an identifer
@@ -18,6 +18,7 @@ Please wrap your lines to 80 characters and indent them with spaces only.
 Version 1.8 -Polaris-
 <http://tikiwiki.org/ReleaseProcess18>
 
+* [MOD] An alternative module-switch_lang2 using the flags
 * [MOD] Allow article creators to edit their articles even if they don't have
   the p_edit_article permission. Default behavior is unchanged, must be turned
   on via the article types.
